redoing about page

--- a/about.css
+++ b/about.css
@@ -21,36 +21,48 @@
 
         padding-left: 2vw;
         margin-right: 10vw;
-   
+
 
         justify-content: center;
-    
+
         gap: 2vh;
     }
 
-    .g-item {
-
-    
 
 
-    }
+    .gr_image1 {
 
-    .flex_image {
-        margin-top: 15vw;
         width: auto;
-        height: 45vw;
-    
-    }
+        height: 22vh;
+        margin-top: 5vh;
 
-        .e_test {
-            height: 70vh;
-            width: 100%;
-            background-color: grey;
-        }
 
     }
 
+    .item-ev {
+        width: 100%;
+    }
 
+    .e_test {
+        height: 70vh;
+        width: 100%;
+        background-color: grey;
+    }
+
+
+
+    ul,
+    li {
+        list-style-type: none;
+    }
+
+    .p {
+
+        line-break: auto;
+        word-wrap: break-word;
+    }
+
+}
 
 
 
@@ -64,38 +76,45 @@
         left: 30vw;
         padding-left: 20vw;
         margin-right: 20vw;
-   
-        background-color: blue;
+
         justify-content: center;
-    
+
         gap: 2vh;
     }
 
-    .g-item {
 
- 
-
-
-    }
 
     .flex_image {
 
         width: auto;
         height: 60vh;
-    
-
         align-items: flex-start;
     }
 
-        .e_test {
-            height: 70vh;
-            width: 100%;
-            background-color: grey;
-        }
 
+    .gr_image1 {
+
+        width: auto;
+        height: 60vh;
+        align-items: flex-start;
+    }
+
+
+    .ev_header {
+        font-size: 1.6rem;
     }
 
 
 
+    ul,
+    li {
+        list-style-type: none;
+    }
 
+    .p {
 
+        line-break: auto;
+        word-wrap: break-word;
+    }
+
+}
