--- a/about.css
+++ b/about.css
@@ -72,6 +72,9 @@
 
     .g-container {
         display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    
         width: 100%;
         left: 30vw;
         padding-left: 20vw;
@@ -97,11 +100,16 @@
         width: auto;
         height: 60vh;
         align-items: flex-start;
+        grid-column-start: 1;
+        grid-row-start: 1;
     }
 
 
     .ev_header {
         font-size: 1.6rem;
+        grid-column: span 2 / span 2;
+        grid-column-start: 1;
+        grid-row-start: 2;
     }
 
 
@@ -109,12 +117,25 @@
     ul,
     li {
         list-style-type: none;
+        width: 60%;
     }
 
     .p {
 
         line-break: auto;
         word-wrap: break-word;
+    }
+
+    .ev_list{
+        grid-column: span 2 / span 2;
+        grid-column-start: 1;
+        grid-row-start: 3;
+    }
+
+    .courier_text {
+
+        grid-column-start: 2;
+        grid-row-start: 1;
     }
 
 }
