--- a/about.css
+++ b/about.css
@@ -66,8 +66,8 @@
         max-width: 80%;
     }
 
-    .ev_list{
-      margin-top: -2.5vh;
+    .ev_list {
+        margin-top: -2.5vh;
     }
 
 }
@@ -128,15 +128,12 @@
         max-width: 80%;
     }
 
-    .ev_list{
-      margin-top: -2.5vh;
-      font-size: 1.1rem ;
+    .ev_list {
+        margin-top: -2.5vh;
+        font-size: 1.1rem;
     }
 
 }
-
-
-
 
 
 /* DESKTOP VERSION */
@@ -147,7 +144,7 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(2, 1fr);
-    
+
         width: 100%;
         left: 30vw;
         padding-left: 20vw;
@@ -174,7 +171,7 @@
         height: 60vh;
         align-items: flex-start;
         grid-column-start: 1;
-    grid-row-start: 1;
+        grid-row-start: 1;
     }
 
 
@@ -199,7 +196,7 @@
         word-wrap: break-word;
     }
 
-    .ev_list{
+    .ev_list {
         grid-column: span 2 / span 2;
         grid-column-start: 1;
         grid-row-start: 3;
@@ -210,5 +207,69 @@
         grid-column-start: 2;
         grid-row-start: 1;
     }
+
+}
+
+/* MOBILE VERSION IPAD */
+@media screen and (800px <=width <=830px) and (990px <=height <=1085px) {
+
+    .g-container {
+        display: grid;
+        width: 100%;
+
+        padding-left: 30vw;
+        margin-right: 10vw;
+
+
+        justify-content: center;
+
+        gap: 1vh;
+    }
+
+
+
+    .gr_image1 {
+
+        width: auto;
+        height: 20vh;
+        margin-top: 4vh;
+        transform: scale();
+
+
+    }
+
+    .item-ev {
+        width: 100%;
+    }
+
+
+    ul,
+    li {
+        list-style-type: none;
+    }
+
+    .p {
+
+        line-break: auto;
+        word-wrap: break-word;
+    }
+
+    .ev_header {
+        font-size: 1.6rem;
+        margin-top: -3vh;
+    }
+
+    .courier_text {
+
+        font-size: 1.1rem;
+        max-width: 80%;
+        margin-top: 3.57vh;
+    }
+
+    .ev_list {
+        margin-top: -30.5vh;
+        font-size: 1.1rem;
+    }
+
 
 }
