--- a/style.css
+++ b/style.css
@@ -106,6 +106,60 @@ html {
 }
 
 
+/* MOBILE VERSION 1 */
+
+@media screen and (350px <= width <= 361px) and (750px <= height <= 801px) {
+
+    
+    
+    .nav ul {
+        font-size: 1.3rem;
+        position: fixed;
+        top: -1.3vh;
+        display: flex;
+        justify-content: left;
+        flex-direction: row;
+        margin-left: -16.8vw;
+        padding-top: 2vh;
+        flex-wrap: nowrap;
+        gap: 0.1vw;
+        z-index: 3;
+        align-content: flex-start;
+        
+       
+
+        
+    }
+
+    .content-section{
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+    
+    .content-section1{
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+       
+    }
+
+
+.overflow_box_hide{
+    background-color:#ffffff;
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+    top: 0;
+    z-index: 2;
+   
+
+  }
+}
+
+
+
 
 
 /* WEB VERSION */
