--- a/about.css
+++ b/about.css
@@ -77,7 +77,7 @@
 
     .g-container {
         display: grid;
-        width: 80%;
+        width: 75%;
 
         padding-left: 20vw;
         margin-right: 10vw;
@@ -277,15 +277,6 @@
     }
 
 
-
-    .flex_image {
-
-        width: auto;
-        height: 60vh;
-        align-items: flex-start;
-    }
-
-
     .gr_image1 {
 
         width: auto;
@@ -321,12 +312,16 @@
         grid-column: span 2 / span 2;
         grid-column-start: 1;
         grid-row-start: 3;
+        margin-top: -48vh;
     }
 
     .courier_text {
 
         grid-column-start: 2;
         grid-row-start: 1;
+        width: 90%;
+        margin-left: 3vh;
+        font-size: 1.1rem;
     }
 
 }
@@ -402,11 +397,13 @@
 
     .g-container {
         display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+
         width: 100%;
-
-        padding-left: 7vw;
-        margin-right: 10vw;
-
+        left: 30vw;
+        padding-left: 40%;
+        margin-right: 20vw;
 
         justify-content: center;
 
@@ -414,24 +411,30 @@
     }
 
 
-
     .gr_image1 {
 
         width: auto;
-        height: 22vh;
-        margin-top: 5vh;
-
-
+        height: 60vh;
+        align-items: flex-start;
+        grid-column-start: 1;
+        grid-row-start: 1;
+        display: none;
     }
 
-    .item-ev {
-        width: 100%;
+
+    .ev_header {
+        font-size: 1.6rem;
+        grid-column: span 2 / span 2;
+        grid-column-start: 1;
+        grid-row-start: 2;
     }
+
 
 
     ul,
     li {
         list-style-type: none;
+        width: 60%;
     }
 
     .p {
@@ -440,40 +443,82 @@
         word-wrap: break-word;
     }
 
-    .ev_header {
-        font-size: 1.6rem;
-        margin-top: -1vh;
+    .ev_list {
+        grid-column: span 2 / span 2;
+        grid-column-start: 1;
+        grid-row-start: 3;
+        margin-top: -35vh;
     }
 
     .courier_text {
 
-        font-size: 1.0rem;
-        max-width: 80%;
+        grid-column-start: 1;
+        grid-row-start: 1;
+        width: 90%;
+        margin-left: 3vh;
+        font-size: 1.1rem;
     }
 
-    .ev_list {
-        margin-top: -2.5vh;
+
+    .nav ul {
+        margin: 0;
+        font-size: 1.6rem;
+        position: fixed;
+        max-width: 21%;
+        display: flex;
+        flex-direction: column;
+        margin-left: -1.8vw;
+        
+        overflow-wrap: break-word;
+    
+       
     }
+    
+    
+        .overflow_box_hide{
+    
+            display:none;
+    
+        }
+    
+        .content-section{
+            margin-top: -1vh;
+            font-size: 2.5rem;
+            color: #777;
+        }
+        
+        .content-section1{
+        
+            font-size: 2.5rem;
+            color: #777;
+            padding-top: 0.1vh;
+            margin-top: 0.1vh;
+           
+        }
+
+        
+
+
+
 }
 
 @media screen and (497px <= width <= 891px) and (height >=501px)  {
 
     
     
+ 
     .nav ul {
-        font-size: 1.3rem;
+        margin: 0;
+        font-size: 1.6rem;
         position: fixed;
-        top: -1.3vh;
+        max-width: 21%;
         display: flex;
-        justify-content: left;
-        flex-direction: row;
-        margin-left: -7.4vw;
-        padding-top: 2vh;
-        flex-wrap: nowrap;
-        gap: 1.7vw;
-        z-index: 3;
-
+        flex-direction: column;
+        margin-left: -1.8vw;
         
+        overflow-wrap: break-word;
+    
+       
     }
 
     .content-section{
