--- a/about.css
+++ b/about.css
@@ -147,15 +147,14 @@ a:hover {
     }
 
 
-        .header_email {
+    .header_email {
         font-size: 1.28rem;
         margin-top: 0.1vh;
     }
 
 
-    .header_email22 {
-        font-size: 1.28rem;
-        margin-top: 0.1vh;
+    .header_live_performance {
+        font-size: 1.5rem;
     }
 
     .courier_text {
@@ -169,12 +168,12 @@ a:hover {
         font-size: 1.4rem;
     }
 
-    .service_text{
+    .service_text {
         font-size: 1.3rem;
 
     }
 
-    .media_links{
+    .media_links {
         font-size: 1.1rem;
     }
 
@@ -192,7 +191,7 @@ a:hover {
         display: grid;
         width: 100%;
 
-        padding-left: 12vw;
+        padding-left: 9vw;
         margin-right: 10vw;
 
 
@@ -206,7 +205,7 @@ a:hover {
     .gr_image1 {
 
         width: auto;
-        height: 22vh;
+        height: 24vh;
         margin-top: 5vh;
 
 
@@ -243,10 +242,103 @@ a:hover {
         margin-top: -2.5vh;
     }
 
+     .header_email {
+        font-size: 1.1rem;
+        margin-top: 0.1vh;
+    }
+
+    
+    .header_live_performance {
+        font-size: 1.28rem;
+        margin-top: -1vh;
+
+    }
+
+    .media_links {
+        margin-top: -2vh;
+    }
 
 
 
 }
+
+/* MOBILE VERSION GALAXY S10 Horizontal */
+
+@media screen and (width <=760px) and (height <=360px) {
+
+    .g-container {
+        display: grid;
+        width: 100%;
+
+        padding-left: 36vw;
+        margin-right: 10vw;
+
+
+        justify-content: center;
+
+        gap: 2vh;
+
+    }
+
+
+
+    .gr_image1 {
+
+        width: auto;
+        height: 75vh;
+        margin-top: 4vh;
+
+
+    }
+
+    .item-ev {
+        width: 100%;
+    }
+
+
+    ul,
+    li {
+        list-style-type: none;
+    }
+
+    .p {
+
+        line-break: auto;
+        word-wrap: break-word;
+    }
+
+
+    .header_email {
+        font-size: 1.28rem;
+        margin-top: 0.1vh;
+    }
+
+
+    .header_live_performance {
+        font-size: 1.5rem;
+    }
+
+    .courier_text {
+
+        font-size: 1.4rem;
+        max-width: 80%;
+    }
+
+    .ev_list {
+        margin-top: -2.5vh;
+        font-size: 1.4rem;
+    }
+
+    .service_text {
+        font-size: 1.3rem;
+
+    }
+
+    .media_links {
+        font-size: 1.1rem;
+    }
+
+} 
 
 
 
