--- a/style.css
+++ b/style.css
@@ -53,6 +53,18 @@ ul {
 }
 
 
+.footer {
+
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+    margin-top: 18.5vh;
+    padding-bottom: 3vh;
+    font-size: 0.8rem;
+
+}
+
 /* MOBILE VERSION GALAXY NOTE ANDROID 11 Vertical */
 
 @media screen and (361px <=width <=499px) and (761px <=height <=950px) {
@@ -100,6 +112,13 @@ ul {
 
 
     }
+
+    .footer {
+
+        margin-top: 4.5vh;
+    
+    }
+    
 }
 
 /* MOBILE VERSION GALAXY NOTE ANDROID 11 Horizontal */
@@ -147,6 +166,115 @@ ul {
         z-index: 2;
 
     }
+
+
+}
+
+/* MOBILE VERSION GALAXY S10 Vertical */
+@media screen and (width <=360px) and (height <=760px){
+
+     .nav ul {
+        font-size: 1.2rem;
+        position: fixed;
+        top: -1.3vh;
+        display: flex;
+        justify-content: left;
+        flex-direction: row;
+        margin-left: -14.4vw;
+        padding-top: 2vh;
+        flex-wrap: nowrap;
+        gap: 1vw;
+        z-index: 3;
+
+
+    }
+
+    .content-section {
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+
+    .content-section1 {
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+
+    }
+
+
+    .overflow_box_hide {
+        background-color: #ffffff;
+        width: 100%;
+        height: 10vh;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+
+
+    }
+
+    .footer {
+
+        margin-top: 4.5vh;
+    
+    }
+
+
+}
+
+/* MOBILE VERSION GALAXY S10 Horizontal */
+
+@media screen and (width <=760px) and (height <=360px) {
+
+    .nav ul {
+        font-size: 1.3rem;
+        position: fixed;
+        display: flex;
+        justify-content: left;
+        flex-direction: column;
+        margin-left: -3.4vw;
+        top: 4.5vh;
+
+        flex-wrap: nowrap;
+        gap: 1.7vw;
+        z-index: 3;
+        margin-top: vh;
+
+
+    }
+
+    .content-section {
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+
+    .content-section1 {
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+
+    }
+
+
+    .overflow_box_hide {
+        background-color: #ffffff;
+        width: 100%;
+        height: 11vh;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+    }
+        
+        .footer{
+            font-size: 0.9rem;
+            padding-bottom: 5vh;
+        }
+
+    
 
 
 }
@@ -280,17 +408,7 @@ ul {
     margin: 15vh;
 }
 
-.footer {
 
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    margin-top: 18.5vh;
-    padding-bottom: 3vh;
-    font-size: 0.8rem;
-
-}
 
 
 .nav li {
