--- a/style.css
+++ b/style.css
@@ -116,9 +116,9 @@ ul {
     .footer {
 
         margin-top: 4.5vh;
-    
+
     }
-    
+
 }
 
 /* MOBILE VERSION GALAXY NOTE ANDROID 11 Horizontal */
@@ -171,9 +171,9 @@ ul {
 }
 
 /* MOBILE VERSION GALAXY S10 Vertical */
-@media screen and (width <=360px) and (height <=760px){
+@media screen and (width <=360px) and (height <=760px) {
 
-     .nav ul {
+    .nav ul {
         font-size: 1.2rem;
         position: fixed;
         top: -1.3vh;
@@ -218,7 +218,7 @@ ul {
     .footer {
 
         margin-top: 4.5vh;
-    
+
     }
 
 
@@ -268,17 +268,119 @@ ul {
         top: 0;
         z-index: 2;
     }
-        
-        .footer{
-            font-size: 0.9rem;
-            padding-bottom: 5vh;
-        }
 
-    
+    .footer {
+        font-size: 0.9rem;
+        padding-bottom: 5vh;
+    }
+
+}
+
+/* MOBILE VERSION GALAXY S20 Vertical */
+
+@media screen and (width <=360px) and (761px<=height <=810px) {
+    .nav ul {
+        font-size: 1.2rem;
+        position: fixed;
+        top: -1.3vh;
+        display: flex;
+        justify-content: left;
+        flex-direction: row;
+        margin-left: -14.4vw;
+        padding-top: 2vh;
+        flex-wrap: nowrap;
+        gap: 1vw;
+        z-index: 3;
+
+
+    }
+
+    .content-section {
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+
+    .content-section1 {
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+
+    }
+
+
+    .overflow_box_hide {
+        background-color: #ffffff;
+        width: 100%;
+        height: 10vh;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+
+
+    }
+
+    .footer {
+
+        margin-top: 4.5vh;
+
+    }
 
 
 }
 
+
+@media screen and (761px <=width <=810px) and (height <=360px) {
+
+    .nav ul {
+        font-size: 1.3rem;
+        position: fixed;
+        display: flex;
+        justify-content: left;
+        flex-direction: column;
+        margin-left: -3.4vw;
+        top: 4.5vh;
+
+        flex-wrap: nowrap;
+        gap: 1.7vw;
+        z-index: 3;
+        margin-top: vh;
+
+
+    }
+
+    .content-section {
+        margin-top: 5vh;
+        font-size: 2.5rem;
+        color: #777;
+    }
+
+    .content-section1 {
+        font-size: 2.5rem;
+        color: #777;
+        padding-top: 3vh;
+        margin-top: 5vh;
+
+    }
+
+
+    .overflow_box_hide {
+        background-color: #ffffff;
+        width: 100%;
+        height: 11vh;
+        position: fixed;
+        top: 0;
+        z-index: 2;
+    }
+
+    .footer {
+        font-size: 0.9rem;
+        padding-bottom: 7vh;
+        margin-top: 8vh;
+    }
+
+}
 
 /* MOBILE VERSION Iphone SE 2nd*/
 @media screen and (370px <=width <=380px) and (660px <=height <=670px) {
